tests/concurrency/valid/acquireLock.wacc
begin
    lock l;
    acquire l
end