tests/concurrency/semanticErr/acquireNonLock.wacc
begin
    int x = 4;
    acquire x
end